--- a/_posts/2016-01-17-test.markdown
+++ b/_posts/2016-01-17-test.markdown
@@ -26,3 +26,5 @@ $ apt-get install -y cmake make build-essential python-sphinx protobuf-compiler 
 {% post_url 2016-01-17-welcome-to-jekyll %}
 
 {% gist ogavrisevs/1a1e8439fb324ea30fe9 %}
+
+{% gist ogavrisevs/2debdcb96d3002a9cbf2 aws-temp-token.sh %}
