--- a/_posts/2019-07-18-TMB.markdown
+++ b/_posts/2019-07-18-TMB.markdown
@@ -45,14 +45,14 @@ Diena 3
  
 ![Col du Bonheme kalns](/images/2019-07-18-TMB/20190721_170935.jpg)
 
-Emocionāli esmu sagrauts nevaru izskaidrot kas ar mani notiek nolemju tomēr iet. Sāku kāpt "Col du Bonheme" (~ 1300 m ) ļoti skaisti kalni ar sniegu \ govīm. 15.00 esmu augšā kalnu mājā "Refuge du Col de la Croix du Bonhomme" atkožu haku nopērc dzērienu uzprasi uzlādēt telefonu. Izdodas mājās nosūtīt pāris ziņas garstāvoklis uzlabojas. WC nav ūdens tikai skaidas ko pakaisīt :D. 16.00 sāku kāpt lejā ap 20.00 finišēju "les Chapieux" bezmaksas kempings ar WC un ūdeni. Esmu pārguris paēdu un aizmiegu. Šis ir ceļojuma zemākais punkts uz dienvidiem. Pa nakti sāp viss ieskaitot sirdi pŗatoju kādas ir manas iespēju robežas.
+Emocionāli esmu sagrauts nevaru izskaidrot kas ar mani notiek nolemju tomēr iet. Sāku kāpt "Col du Bonheme" (~ 1300 m ) ļoti skaisti kalni ar sniegu \ govīm. 15.00 esmu augšā kalnu mājā "Refuge du Col de la Croix du Bonhomme" atkožu haku nopērc dzērienu uzprasi uzlādēt telefonu. Izdodas mājās nosūtīt pāris ziņas garstāvoklis uzlabojas. WC nav ūdens tikai skaidas ko pakaisīt :D. 16.00 sāku kāpt lejā ap 20.00 finišēju "les Chapieux" bezmaksas kempings ar WC un ūdeni. Esmu pārguris paēdu un aizmiegu. Šis ir ceļojuma zemākais punkts uz dienvidiem. Pa nakti sāp viss ieskaitot sirdi prātoju kādas ir manas iespēju robežas.
 
 Diena 4
 =========
  
 ![Alpe Superieure de l'ārp Vieille](/images/2019-07-18-TMB/20190722_182816.jpg)
 
-Izmetu daļu pārtikas jo ir par daudz atstāju 3x dienu rezervi. Ceļos laicīgi bet ar vissu pakošanos un ēšanu sāku kāpt ap 9.00. Sākums lēzans bet tad atkal 900m serpentīns kalnā. Neskatoties uz sauli kalnu pieveicu, esmu "Col de la Seigne" 2516m francijas/itālijas robežas. Nevaru izlemt "spiest gāzi grīdā" un pēc 10 km lejup pieveikt velvienu kalnu ~400m lai nokļūtu itālijas pilsētā "Courmayeur" vai piebremzēt. Doma par labu ēdienu spiež kāpt otrā kalnā kurā uzkāpju jau pavēlu ~19.00 sākumā ceļš lejup ir ejams bet pie pašas pilsētas kalnu taka ir ļoti stāva (pārsvarā ar pakāpieniem) ar pilnīgu spēku izsīkumu puss tumsā skrienu lejup lai uzspētu uz kādu picēriju. Pica neliek vilties pirmmos kumosus baudu ar aizvērtām acīm. Pilsētā nav kempinga tamdēļ stundu vandos pa nezālēm meklējot kur uzsliet telti. Esmu pieveicis 30 km šodien. 
+Izmetu daļu pārtikas jo ir par daudz atstāju 3x dienu rezervi. Ceļos laicīgi bet ar vissu pakošanos un ēšanu sāku kāpt ap 9.00. Sākums lēzans bet tad atkal 900m serpentīns kalnā. Neskatoties uz sauli kalnu pieveicu, esmu "Col de la Seigne" 2516m francijas/itālijas robežas. Nevaru izlemt "spiest gāzi grīdā" un pēc 10 km lejup pieveikt velvienu kalnu ~400m lai nokļūtu itālijas pilsētā "Courmayeur" vai piebremzēt. Doma par labu ēdienu spiež kāpt otrā kalnā kurā uzkāpju jau pavēlu ~19.00 sākumā ceļš lejup ir ejams bet pie pašas pilsētas kalnu taka ir ļoti stāva (pārsvarā ar pakāpieniem) ar pilnīgu spēku izsīkumu puss tumsā skrienu lejup lai uzspētu uz kādu picēriju. Pica neliek vilties pirmos kumosus baudu ar aizvērtām acīm. Pilsētā nav kempinga tamdēļ stundu vandos pa nezālēm meklējot kur uzsliet telti. Esmu pieveicis 30 km šodien. 
 
 Diena 5
 =========
