Add island hiking

--- a/_posts/2019-07-18-TMB.markdown
+++ b/_posts/2019-07-18-TMB.markdown
@@ -66,7 +66,7 @@ Diena 6
 
 ![Gr col Ferret](/images/2019-07-18-TMB/20190724_102238.jpg)
 
-Pašsanjūta ļoti laba nolemju tomēr mēģināt iet šveicē. Nokāpju no kalna un 12.30 sāku rāpties nākamajā kalnā. Ap 16.00 esmu augšā "Gr col Ferret" 2537m itālijas/šveices robežas ceļš līdz kempingam ļoti garšs todien nogāju 20 km ap 17.30 finišēju. Pirmo reizi guļu kempingā kur var iejiet dušā un uzlādēt telefonu laimei nav robežu. Veikalā dabūju sieru arī vakariņas (kartupeļu pārslas ar žāvētiem dārzeņiem un sieru) ir ēdamas. Dodos gulēt jau ap 21.00 lai agrāk celtos. 
+Pašsajūta ļoti laba nolemju tomēr mēģināt iet šveicē. Nokāpju no kalna un 12.30 sāku rāpties nākamajā kalnā. Ap 16.00 esmu augšā "Gr col Ferret" 2537m itālijas/šveices robežas ceļš līdz kempingam ļoti garšs todien nogāju 20 km ap 17.30 finišēju. Pirmo reizi guļu kempingā kur var iejiet dušā un uzlādēt telefonu laimei nav robežu. Veikalā dabūju sieru arī vakariņas (kartupeļu pārslas ar žāvētiem dārzeņiem un sieru) ir ēdamas. Dodos gulēt jau ap 21.00 lai agrāk celtos. 
 
 Diena 7
 =========
