--- a/_posts/2022-08-29-Islande.markdown
+++ b/_posts/2022-08-29-Islande.markdown
@@ -19,7 +19,7 @@ Landmannalaugar -> Skógar (kāpums 2 620 m, kritums 2060 m, distandce 78 km ). 
 0-diena
 --------
 
-Lidojam ar tiešo airbaltic lidojumu Rīga -> Reikjavīka (BT170). Ilgi meklējam autobussa pieturu pie lidostas ( [kordinātes: 63°59'49.0"N 22°37'42.5"W](https://goo.gl/maps/A3MbkFpxgXRM97cV9) ) buss reizi 30 min. Centrā kāpjam laukā gala pieturā pie domes un spagojam uz kempingu [Reykjavík Campsite](https://www.reykjavikcampsite.is) ~ 4 km. Biļetes telts celšanai var nopirkt telefonā vai recepsijā turpat arī var dabūt gāzi turistu plītiņai (tikai lielie bunduļi). Kempings šiks ir siltā duša, liela virtuve. 
+Lidojam ar tiešo airbaltic lidojumu Rīga -> Reikjavīka (BT170). Ilgi meklējam autobussa pieturu pie lidostas ( [kordinātes: 63°59'49.0"N 22°37'42.5"W](https://goo.gl/maps/A3MbkFpxgXRM97cV9) ) buss reizi 30 min. Centrā kāpjam laukā gala pieturā pie domes un spagojam uz kempingu [Reykjavík Campsite](https://www.reykjavikcampsite.is) ~ 4 km. Biļetes telts celšanai var nopirkt telefonā vai recepsijā, turpat arī var dabūt gāzi turistu plītiņai (tikai lielie bunduļi). Kempings šiks ir siltā duša, liela virtuve. 
 
 1-diena
 -------
